Bug 1657193 - Bail early if we detect tree corruption when building a string. r=morgan, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D85909